# tsbk07

lab1/: GL_utilities.c  GL_utilities.h  Makefile  Questions.txt  Questions.txt~  VectorUtils2.c  VectorUtils2.h  lab1-1  lab1-1.c  lab1-1.c~  lab1-1.elf  lab1-1.vert  lab1-2.c  lab1-2.c~  lab1-2.elf  lab1-2.vert~  lab1-3.c  lab1-3.c~  lab1-3.elf  lab1-3.frag  lab1-3.vert  lab1-4.c  lab1-4.c~  lab1-4.elf  lab1-4.frag  lab1-4.frag~  lab1-4.vert  lab1-4.vert~  lab1-5.c  lab1-5.c~  lab1-5.elf  lab1-5.vert~  lab1-6.c  lab1-6.c~  lab1-6.elf  lab1-6.vert  lab1-7.c  lab1-7.c~  lab1-7.elf  lab1-7.frag  (+9 more)
lab2/: GL_utilities.c  GL_utilities.h  LoadTGA.c  VectorUtils2.h  bilskissred.tga  conc.tga  dirt.tga  lab2-1.c  lab2-1.frag  (+9 more)
projekt/: CMakeLists.txt  algorithm.m  configuration.yaml  fculling.eps  normalize.m  tsbk07_presentation.odp  twopoint.tex
projekt/elements/: CMakeLists.txt
projekt/elements/camera/: camera.cpp  camera.hpp
projekt/elements/flyer/: CMakeLists.txt  flyer.cpp  flyer.hpp  flyer.vert
projekt/elements/glider/: glider.cpp  glider.hpp
projekt/elements/ground/: CMakeLists.txt  ground.cpp  ground.frag  water.tga
projekt/elements/screen/: CMakeLists.txt  blur.cl  pass.vs  screen.cpp  screen.fs  screen.hpp
projekt/elements/skybox/: skybox.cpp  skybox.hpp
projekt/elements/terrain/: CMakeLists.txt  TERRA2.tga  billboard.frag  billboard.vert  culling.cl  f3.tga  grass.fs  grass.gs  grassstrain.tga  maskros512.tga  newterrain.tga  ok1.tga  pass.vs  screen.fs  seeds.vs  terrain.cpp  terrain.frag  terrain.hpp  white.fs  white.fs~
projekt/src/: main.cpp
(+108 files in other folders)
